cluster/homelab/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: homelab
  labels:
    app: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
